--- a/Gestion/templates/gestion/acceuil_liv.html
+++ b/Gestion/templates/gestion/acceuil_liv.html
@@ -111,7 +111,7 @@
     </div>
     <hr>
     <div class="container">
-        <a href="{% url 'page_commandes' %}" style="background-color: #19e4e4;">
+        <a href="{% url 'page_commandes_liv' %}" style="background-color: #19e4e4;">
             <div class="square">
                 <i class="icon fas fa-shopping-cart" style="margin-left: 20%;"></i>
                 <div class="text">
