--- a/Gestion/templates/gestion/create_depenseprivee.html
+++ b/Gestion/templates/gestion/create_depenseprivee.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Depense privee</title>
+  <title>Creer une Depense privee</title>
   <style>
     /* Styles pour le formulaire */
     body {
