--- a/Gestion/templates/gestion/create_approvision.html
+++ b/Gestion/templates/gestion/create_approvision.html
@@ -64,7 +64,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Approvision</h2>
+    <h2>Creer Approvision</h2>
     <form method="POST">
       {% csrf_token %}
       <div>
