--- a/Gestion/templates/gestion/create_client.html
+++ b/Gestion/templates/gestion/create_client.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Client</h2>
+    <h2>creer un Client</h2>
     <form method="POST">
       {% csrf_token %} <!-- Jeton CSRF pour sécurité -->
       <div>
