--- a/Gestion/templates/gestion/create_commande.html
+++ b/Gestion/templates/gestion/create_commande.html
@@ -9,7 +9,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh; /* Hauteur de l'écran */
+      height: 130vh; /* Hauteur de l'écran */
       margin: 0; /* Supprimer la marge par défaut du corps */
       font-family: Arial, sans-serif; /* Police de caractères */
     }
@@ -36,7 +36,8 @@
     }
 
     .container input,
-    .container select {
+    .container select,
+    .container textarea {
       display: block;
       margin-bottom: 10px;
       width: 95%; /* Largeur du champ */
@@ -64,35 +65,41 @@
 </head>
 <body>
   <div class="container">
-    <h2>Commande</h2>
+    <h2>Creer une Commande</h2>
     <form method="POST">
       {% csrf_token %} <!-- Jeton CSRF pour sécurité -->
-      <label for="nom">Nom :</label>
-      <input type="text" name="nom" placeholder="Nom" maxlength="15" required>
-      <label for="prenom">Prenom :</label>
-      <input type="text" name="prenom" placeholder="Prenom" maxlength="20" required>
-      <label for="telephone">Telephone :</label>
-      <input type="text" name="telephone" placeholder="Telephone" maxlength="15" required>
-      <label for="lieu">Lieu :</label>
-      <input type="text" name="lieu" placeholder="Lieu" maxlength="15" required>
-
+      <div>
+        <label for="nom">Nom :</label>
+        <input type="text" name="nom" maxlength="15" required>
+      </div>
+      <div>
+        <label for="prenom">Prenom :</label>
+        <input type="text" name="prenom" maxlength="20" required>
+      </div>
+      <div>
+        <label for="telephone">Telephone :</label>
+        <input type="text" name="telephone" maxlength="15" required>
+      </div>
+      <div>
+        <label for="lieu">Lieu :</label>
+        <input type="text" name="lieu" maxlength="15" required>
+      </div>
       <div>
         <label for="produit">Produit :</label>
-        <select name="produit" >
+        <select name="produit">
           {% for produit in produits %}
             <option value="{{ produit.Id }}">{{ produit.Id }}</option>
           {% endfor %}
         </select>
       </div>
-      
       <div>
         <label for="quantite">Quantite :</label>
-        <input type="number" name="quantite" placeholder="Quantite" value="1" required>
+        <input type="number" name="quantite" value="1" required>
       </div>
-
-      <label for="rabais">Rabais :</label>
-      <input type="number" name="rabais" placeholder="Rabais" required>
-
+      <div>
+        <label for="rabais">Rabais :</label>
+        <input type="number" name="rabais" required>
+      </div>
       <div>
         <label for="statut">Statut :</label>
         <select name="statut" required>
@@ -100,7 +107,6 @@
           <option value="livre">Livre</option>
         </select>
       </div>
-
       <div>
         <label for="payer">Payer ? :</label>
         <select name="payer" required>
@@ -108,7 +114,6 @@
           <option value="OUI">OUI</option>
         </select>
       </div>
-
       <div>
         <label for="livreur">Livreur :</label>
         <select name="livreur" required>
@@ -117,8 +122,9 @@
           {% endfor %}
         </select>
       </div>
-
-      <button type="submit">Enregistrer</button>
+      <div>
+        <button type="submit">Enregistrer</button>
+      </div>
     </form>
   </div>
 </body>
