--- a/Gestion/templates/gestion/create_depense.html
+++ b/Gestion/templates/gestion/create_depense.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Depense</h2>
+    <h2>Creer une Depense</h2>
     <form method="POST">
       {% csrf_token %} <!-- Jeton CSRF pour sécurité -->
       <div>
