--- a/Gestion/templates/gestion/create_produit.html
+++ b/Gestion/templates/gestion/create_produit.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Formulaire</h2>
+    <h2>Creer un Produit</h2>
     <form method="POST" enctype="multipart/form-data">
       {% csrf_token %} <!-- Jeton CSRF pour sécurité -->
       <div>
