--- a/Gestion/templates/gestion/create_user.html
+++ b/Gestion/templates/gestion/create_user.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Création d'utilisateur</h2>
+    <h2>Creer un utilisateur</h2>
     <form method="POST" action="/create_user">
       {% csrf_token %}
       <div>
