--- a/Gestion/templates/gestion/login.html
+++ b/Gestion/templates/gestion/login.html
@@ -29,6 +29,7 @@
     .container input[type="password"] {
       width: 100%;
       padding: 10px;
+      margin-left:-10px;
       margin-bottom: 10px;
       border: 1px solid #dddddd; /* Couleur de la bordure des champs */
       border-radius: 4px;
@@ -55,7 +56,7 @@
     <form method="post">
         {% csrf_token %}
       <input type="text" name="username" placeholder="Nom d'utilisateur" required>
-      <input type="text" name="password" placeholder="Mot de passe" required>
+      <input type="password" name="password" placeholder="Mot de passe" required>
       <button type="submit">Se connecter</button>
     </form>
   </div>
