--- a/Gestion/templates/gestion/login.html
+++ b/Gestion/templates/gestion/login.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Page de connexion</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       background-color: #eaf6ff; /* Couleur principale bleu ciel */
