--- a/Gestion/templates/gestion/create_depenseprivee.html
+++ b/Gestion/templates/gestion/create_depenseprivee.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Creer une Depense privee</title>
   <style>
     /* Styles pour le formulaire */
