--- a/Gestion/templates/gestion/create_commande.html
+++ b/Gestion/templates/gestion/create_commande.html
@@ -117,6 +117,13 @@
         </select>
       </div>
       <div>
+        <label for="equipe">Equipe:</label>
+        <select name="equipe" required>
+          <option value="equipe01">Equipe01</option>
+          <option value="equipe02">Equipe02</option>
+        </select>
+      </div>
+      <div>
         <label for="livreur">Livreur :</label>
         <select name="livreur" required>
           {% for user in users %}
