--- a/Gestion/templates/gestion/profil_produit.html
+++ b/Gestion/templates/gestion/profil_produit.html
@@ -73,7 +73,7 @@
 
         <div class="product-info">
             <label>Prix:</label>
-            <span>{{ produit.Prix }}</span>
+            <span>{{ produit.Prix }} FCFA</span>
         </div>
 
         <div class="product-info">
