--- a/Gestion/templates/gestion/approvisions.html
+++ b/Gestion/templates/gestion/approvisions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Approvisionnements</title>
+    <title>Approvisions</title>
     <style>
         table {
             border-collapse: collapse;
