--- a/Gestion/templates/gestion/clients.html
+++ b/Gestion/templates/gestion/clients.html
@@ -3,44 +3,51 @@
 <head>
     <title>Clients</title>
     <style>
-        .category {
-            font-weight: bold;
-            font-size: 1.2em;
-            margin-top: 20px;
-        }
-
-        table {
-            border-collapse: collapse;
+        body {
+            margin: 0;
+            padding: 0;
             width: 100%;
+            font-family: Arial, sans-serif;
         }
 
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
+        h1 {
+            color: black;
+            padding: 20px;
+            margin: 0;
             text-align: center;
         }
 
-        tr:hover {
-            background-color: #f5f5f5;
+        table.common-style {
+            border-collapse: collapse;
+            width: 100%;
+            text-align: center;
         }
 
-        th {
+        table.common-style th, table.common-style td {
+            padding: 8px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        table.common-style th {
             background-color: #00bfff;
             color: white;
         }
-        
+
+        table.common-style tr:hover {
+            background-color: #f5f5f5;
+        }
+
         span {
             font-weight: bold;
         }
-        
+
         .header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
         }
-        
+
         .create-button {
             background-color: #00bfff;
             color: white;
@@ -53,8 +60,13 @@
             border-radius: 4px;
             cursor: pointer;
         }
-        .create-button:hover{
+
+        .create-button:hover {
             background-color: #0084ff;
+        }
+
+        tr {
+            cursor: pointer;
         }
     </style>
 </head>
@@ -63,7 +75,7 @@
         <h1>Liste des clients</h1>
         <a href="{% url 'creer_client' %}" style="margin-right: 50px;" class="create-button">Créer</a>
     </div>
-    <table>
+    <table class="common-style">
         <tr>
             <th>Nom</th>
             <th>Prénom</th>
@@ -73,7 +85,7 @@
             <th>Dernier Passage</th>
         </tr>
         {% for client in clients %}
-            <tr onclick="window.location='{% url 'profil_client' client.id %}';" style="cursor: pointer;">
+            <tr onclick="window.location='{% url 'profil_client' client.id %}';">
                 <td><span>{{ client.Nom }}</span></td>
                 <td><span>{{ client.Prenom }}</span></td>
                 <td>{{ client.Telephone }}</td>
@@ -85,4 +97,3 @@
     </table>
 </body>
 </html>
-
