--- a/Gestion/templates/gestion/commandes.html
+++ b/Gestion/templates/gestion/commandes.html
@@ -3,51 +3,49 @@
 <head>
     <title>Commandes</title>
     <style>
-        table {
-            border-collapse: collapse;
+        body {
+            margin: 0;
+            padding: 0;
             width: 100%;
+            font-family: Arial, sans-serif;
         }
 
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
+        h1 {
+            color: black;
+            padding: 20px;
+            margin: 0;
             text-align: center;
         }
 
-        tr:hover {
+        table.common-style {
+            border-collapse: collapse;
+            width: 100%;
+            text-align: center;
+        }
+
+        table.common-style th, table.common-style td {
+            padding: 8px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        table.common-style th {
+            background-color: rgb(248, 28, 28);
+            color: white;
+        }
+
+        table.common-style tr:nth-child(even) {
             background-color: #f5f5f5;
         }
 
-        th {
-            background-color: rgb(248, 28, 28);
-            color: white;
-            text-align: center;
-        }
-
-        .status-non-livre {
-            color: red;
-            font-weight: bold;
-        }
-
-        .status-livre {
-            color: green;
-            font-weight: bold;
-        }
-
-        .status-annule {
-            color: gray;
-            font-weight: bold;
-        }
         .header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
         }
-        
+
         .create-button {
-            background-color:rgb(248, 28, 28);
+            background-color: rgb(248, 28, 28);
             color: white;
             border: none;
             padding: 10px 20px;
@@ -57,11 +55,12 @@
             font-size: 16px;
             border-radius: 4px;
             cursor: pointer;
-            
         }
-        .create-button:hover{
+
+        .create-button:hover {
             background-color: darkred;
         }
+
         .modify-link {
             background-color: rgb(248, 28, 28);
             color: white;
@@ -77,14 +76,42 @@
         .modify-link:hover {
             background-color: darkred;
         }
+
+        button {
+            width: 120px;
+            height: 45px;
+            font-size: 16px;
+            font-weight: bold;
+            background-color: rgb(248, 28, 28);
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: darkred;
+        }
+
+        .buttons {
+            display: flex;
+            gap: 10px;
+            margin-right:10px
+        }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1 style="margin-left:2%">Liste des commandes</h1>
-        <a href="{% url 'creer_commande' %}" style="margin-right: 50px;" class="create-button">Créer</a>
+        <div>
+            <h1 style="margin-left:2%">Commandes</h1>
+        </div>
+        <div class="buttons">
+            <button onclick="window.location.href='{% url 'redirection_accueil' %}'">Accueil</button>            
+            <button onclick="window.location.href='/create_cm'">Creer</button>
+        </div>
     </div>
-    <table>
+    <table class="common-style">
         <tr>
             <th>Nom</th>
             <th>Prénom</th>
@@ -97,6 +124,7 @@
             <th>Lieu</th>
             <th>Payer?</th>
             <th>livreur</th>
+            <th>Equipe</th>
             <th>Date et heure</th>
             <th>Actions</th>
         </tr>
@@ -113,6 +141,7 @@
                 <td>{{commande.Lieu}}</td>
                 <td>{{commande.Payer}}</td>
                 <td>{{commande.Livreur}}</td>
+                <td>{{commande.Equipe}}</td>
                 <td>{{commande.date_et_heure}}</td>
                 <td>
                     <a href="{% url 'modifier_commande' commande.No %}" class="modify-link">Modifier</a>
