--- a/Gestion/templates/gestion/create_depenseprivee.html
+++ b/Gestion/templates/gestion/create_depenseprivee.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Creer une Depense privee</title>
+  <title>Creer Depense privee</title>
   <style>
     /* Styles pour le formulaire */
     body {
