--- a/Gestion/templates/gestion/login.html
+++ b/Gestion/templates/gestion/login.html
@@ -60,7 +60,10 @@
       <input type="text" name="username" placeholder="Nom d'utilisateur" required>
       <input type="password" name="password" placeholder="Mot de passe" required>
       <button type="submit">Se connecter</button>
-    </form>
+      <div style="text-align: center; margin-top: 5px;">
+        <a onclick="window.location='reset_password';" style="cursor: pointer; color:red;">Mot de passe Oublié</a>
+      </div>
+        </form>
   </div>
 </body>
 </html>
