--- a/Gestion/templates/gestion/users.html
+++ b/Gestion/templates/gestion/users.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Personnel</title>
+    <title>Personnels</title>
     <style>
         /* Styles généraux */
         .create-button {
