--- a/Gestion/templates/gestion/compter.html
+++ b/Gestion/templates/gestion/compter.html
@@ -99,6 +99,7 @@
             <tr>
                 <th>Nom</th>
                 <th>Prénom</th>
+                <th>Produit</th>
                 <th>Lieu</th>
                 <th>Encaisser</th>
             </tr>
@@ -106,6 +107,7 @@
                     <tr>
                         <td>{{ facture.Nom }}</td>
                         <td>{{ facture.Prenom }}</td>
+                        <td>{{ facture.Produit }}</td>
                         <td>{{ facture.Lieu }}</td>
                         <td>{{ facture.Total }}</td>
                     </tr>
