--- a/Gestion/templates/registration/confmail.html
+++ b/Gestion/templates/registration/confmail.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mot de passe Oublier</title>
     <style>
         body {
@@ -78,7 +80,7 @@
     </div>
     <div class="container">
         <h1>Requete valide</h1>
-        <p>Un nouveau mot de passe vous a ete envoyer a l'adresse email fournie precedamment ! Consulter votre boite mail et revenez vous connecter avec votre nom d'utilisateur et ce mot de passe ! </p>
+        <p>Un nouveau mot de passe vous a ete envoyer a l'adresse email fournie precedamment ! Consulter votre boite mail et reconnectez-vous avec ce mot de passe! </p>
     </div>
 </body>
 </html>
