--- a/Gestion/templates/gestion/commandes.html
+++ b/Gestion/templates/gestion/commandes.html
@@ -107,7 +107,10 @@
             <h1 style="margin-left:2%">Commandes</h1>
         </div>
         <div class="buttons">
-            <button onclick="window.location.href='{% url 'redirection_accueil' %}'">Accueil</button>            
+            <div class="search-container" style="margin-top:10px;">
+                <input type="text" id="search-input" placeholder="Rechercher">
+            </div></br>
+            <button onclick="window.location.href='{% url 'redirection_acceuil' %}'">Accueil</button>            
             <button onclick="window.location.href='/create_cm'">Creer</button>
         </div>
     </div>
@@ -149,5 +152,32 @@
             </tr>
         {% endfor %}
     </table>
+
+    <script>
+        // Récupérez la barre de recherche et le tableau des factures
+        const searchInput = document.getElementById("search-input");
+        const tableRows = document.querySelectorAll(".common-style tr");
+    
+        // Écoutez les changements dans la barre de recherche
+        searchInput.addEventListener("input", function () {
+            const searchTerm = searchInput.value.toLowerCase();
+    
+            // Parcourez chaque ligne du tableau, en commençant par la deuxième ligne (index 1)
+            for (let i = 1; i < tableRows.length; i++) {
+                const row = tableRows[i];
+                const cells = row.querySelectorAll("td");
+    
+                // Le nom et le prénom sont dans les cellules 0 et 1
+                const nomPrenom = cells[0].textContent.toLowerCase() + cells[1].textContent.toLowerCase();
+    
+                // Vérifiez si le terme de recherche est inclus dans le nom/prénom
+                if (nomPrenom.includes(searchTerm)) {
+                    row.style.display = ""; // Affiche la ligne
+                } else {
+                    row.style.display = "none"; // Masque la ligne
+                }
+            }
+        });
+    </script>
 </body>
 </html>
