--- a/Gestion/templates/gestion/factures.html
+++ b/Gestion/templates/gestion/factures.html
@@ -36,7 +36,6 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px;
         }
         
         .create-button {
@@ -55,13 +54,40 @@
         .create-button:hover {
             background-color: #0084ff;
         }
+        .search-form {
+            text-align: center;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
         
-        /* Le reste de votre style pour cette page va ici */
+        #search {
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            width: 200px;
+        }
+        
+        /* Styles pour le bouton de recherche */
+        #search-button {
+            background-color: #00bfff;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        
+        #search-button:hover {
+            background-color: #0084ff;
+        }
     </style>
 </head>
 <body>
     <div class="header">
         <h1 style="margin-left: 5%;">Liste des Factures</h1>
+        <div class="search-container" style="margin-top:10px;">
+            <input type="text" id="search-input" placeholder="Rechercher">
+        </div></br>
         <a href="{% url 'compter' %}" style="margin-right: 50px;" class="create-button">Comptes</a>
     </div>
     <!-- Afficher le numéro de facture en haut au centre de la page -->
@@ -97,5 +123,32 @@
         </tr>
         {% endfor %}
     </table>
+
+    <script>
+        // Récupérez la barre de recherche et le tableau des factures
+        const searchInput = document.getElementById("search-input");
+        const tableRows = document.querySelectorAll(".common-style tr");
+    
+        // Écoutez les changements dans la barre de recherche
+        searchInput.addEventListener("input", function () {
+            const searchTerm = searchInput.value.toLowerCase();
+    
+            // Parcourez chaque ligne du tableau, en commençant par la deuxième ligne (index 1)
+            for (let i = 1; i < tableRows.length; i++) {
+                const row = tableRows[i];
+                const cells = row.querySelectorAll("td");
+    
+                // Le nom et le prénom sont dans les cellules 0 et 1
+                const nomPrenom = cells[0].textContent.toLowerCase() + cells[1].textContent.toLowerCase();
+    
+                // Vérifiez si le terme de recherche est inclus dans le nom/prénom
+                if (nomPrenom.includes(searchTerm)) {
+                    row.style.display = ""; // Affiche la ligne
+                } else {
+                    row.style.display = "none"; // Masque la ligne
+                }
+            }
+        });
+    </script>
 </body>
 </html>
