--- a/Gestion/templates/registration/password.html
+++ b/Gestion/templates/registration/password.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Réinitialisation de mot de passe</title>
     <style>
         body {
@@ -57,12 +58,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Réinitialisation de mot de passe</h1>
+        <h1>Récuperation de mot de passe</h1>
         <form method="post">
             {% csrf_token %}
             <label for="email">Adresse e-mail :</label>
             <input type="email" id="email" name="email" required>
-            <button type="submit">Réinitialiser le mot de passe</button>
+            <button type="submit">Envoyer</button>
         </form>
     </div>
 </body>
